--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: python one.py
+        working-directory: ./python
+        run:  python one.py
+        
         
   job2:
     if: ${{ always() }}
@@ -41,4 +43,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a second script
+        working-directory: ./python
         run: python two.py
